created signup fragment and fixed some layout bugs from first and second fragments

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,13 @@
     <string name="get_started_content_description">Background image of a living room with a sofa</string>
     <string name="hello">Hello!</string>
     <string name="welcome_back">WELCOME BACK</string>
+    <string name="email">Email</string>
+    <string name="password">Password</string>
+    <string name="hint_your_email">Insert your email</string>
+    <string name="hint_password">Insert your password</string>
+    <string name="forgot_password">Forgot Password</string>
+    <string name="login">Login</string>
+    <string name="sign_up">SIGN UP</string>
+    <string name="name">Name</string>
+    <string name="confirm_password">Confirm Password</string>
 </resources>
