--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,4 +25,24 @@
     <string name="profile">Profile</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="search">Search</string>
+    <string name="content_desc_search">Search Button</string>
+    <string name="cart">Cart</string>
+    <string name="content_desc_cart">Cart button</string>
+
+    <string-array name="product_array">
+        <item>Bed</item>
+        <item>Lamp</item>
+        <item>Table</item>
+        <item>Bed</item>
+        <item>Lamp</item>
+        <item>Table</item>
+        <item>Bed</item>
+        <item>Lamp</item>
+        <item>Table</item>
+        <item>Bed</item>
+        <item>Lamp</item>
+        <item>Table</item>
+    </string-array>
+
 </resources>
