--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,6 +29,11 @@
     <string name="content_desc_search">Search Button</string>
     <string name="cart">Cart</string>
     <string name="content_desc_cart">Cart button</string>
+    <string name="my_orders">My Orders</string>
+    <string name="shipping_addresses">Shipping Addresses</string>
+    <string name="payment_method">Payment Method</string>
+    <string name="my_reviews">My Reviews</string>
+    <string name="settings">Settings</string>
 
     <string-array name="product_array">
         <item>Bed</item>
