fixed orders layout, created shipping addresses fragment and layout

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -102,6 +102,7 @@
     <string name="_0">0</string>
     <string name="my_cart">My Cart</string>
     <string name="back_button">Back Button</string>
+    <string name="use_as_the_shipping_address">Use as the shipping address</string>
     <string-array name="my_order_tabs_titles">
         <item>Delivered</item>
         <item>Processing</item>
