--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -105,6 +105,8 @@
     <string name="use_as_the_shipping_address">Use as the shipping address</string>
     <string name="product_added">The product was added to the cart!</string>
     <string name="favorites_added">The product was added to your favorites!</string>
+    <string name="checkout">Checkout</string>
+    <string name="total">Total:</string>
     <string-array name="my_order_tabs_titles">
         <item>Delivered</item>
         <item>Processing</item>
