--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -97,8 +97,6 @@
         <item>Favorite 6</item>
         <item>Favorite 7</item>
     </string-array>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="_0">0</string>
     <string name="my_cart">My Cart</string>
     <string name="back_button">Back Button</string>
@@ -119,5 +117,6 @@
         <item>Processing</item>
         <item>Canceled</item>
     </string-array>
+    <string name="full_address">%s, %s, %s, %s, %s</string>
 
 </resources>
